force-app/main/default/objects/Demographic_Data__c/Demographic_Data__c.object-meta.xml
<CustomObject>
    <description>Demographic information per pin code or micro-market area, sourced from Census of India and NSSO</description>
    <label>Demographic Data</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demographic Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>