force-app/main/default/objects/Demographic_Data__c/fields/Age_18_35_Pct__c.field-meta.xml
<CustomField>
    <fullName>Age_18_35_Pct__c</fullName>
    <label>Age 18-35 (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>