force-app/main/default/objects/Demographic_Data__c/fields/Female_Population__c.field-meta.xml
<CustomField>
    <fullName>Female_Population__c</fullName>
    <label>Female Population</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>