force-app/main/default/objects/Demographic_Data__c/fields/Income_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Income_Bracket__c</fullName>
    <label>Income Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Upper-Middle</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>