force-app/main/default/objects/Demographic_Data__c/fields/Literacy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Literacy_Rate__c</fullName>
    <label>Literacy Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>