force-app/main/default/objects/Demographic_Data__c/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <externalId>true</externalId>
    <label>Pin Code</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>