force-app/main/default/objects/Demographic_Data__c/fields/Source_Version__c.field-meta.xml
<CustomField>
    <fullName>Source_Version__c</fullName>
    <label>Source Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>