force-app/main/default/objects/Demographic_Data__c/fields/Urban_Rural__c.field-meta.xml
<CustomField>
    <fullName>Urban_Rural__c</fullName>
    <label>Urban / Rural</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Semi-Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>