force-app/main/default/objects/Demographic_Data__c/fields/Working_Population_Pct__c.field-meta.xml
<CustomField>
    <fullName>Working_Population_Pct__c</fullName>
    <label>Working Population (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>