force-app/main/default/objects/Demographic_Data__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Data Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>